@@ -32,3 +32,5 @@ StartingLocale=pt
 #DefaultTransientPackages=
 
 #FileLocking = false
+
+PanelGenerator.Class=org.enhydra.jawe.xyz.XYZPanelGenerator
